--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalcFact</title>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
 </head>
 
@@ -16,30 +16,33 @@
         <div class="containCalFact">
             <!-- INFORMATION APP CalFact -->
             <section class="informationCalFact">
-                <h2>¿Qué es CalFact?</h2>
-                <p>CalFact es una increíble aplicación que te permite calcular el factorial de un número de forma rápida
+                <h2>¿Qué es CalcFact?</h2>
+                <p>CalcFact es una increíble aplicación que te permite calcular el factorial de un número de forma
+                    rápida
                     y
                     sencilla.</p>
                 <h2>¿Te preguntas qué es un factorial? </h2>
-                <p>¡Es fácil! El factorial de un número entero positivo "n" (también conocido como n!) es el resultado
-                    de
-                    multiplicar todos los números enteros positivos desde 1 hasta "n".</p>
+                <p>¡Es fácil! El factorial de un número entero positivo "n" ( también conocido como <i>
+                        <strong>n!</strong> </i> ) es el resultado
+                    de multiplicar todos los números enteros positivos desde 1 hasta "n".</p>
             </section>
 
             <!-- SECTION FACTORIAL APP -->
             <section class="factorialApp">
-                <h1>CalFact </h1>
-                <div>
-                    <form action="">
-                        <input type="text" placeholder="Valor a calcular">
-                        <button type="submit">CALCULAR</button>
-                    </form>
+                <div class="containFactorialApp">
+                    <h2>CalcFact </h2>
+                    <div>
+                        <form>
+                            <input type="text" placeholder="Valor a calcular">
+                            <button type="submit">CALCULAR</button>
+                        </form>
+                    </div>
+                    <h3 >El factorial de <span>n!</span> es:</h3>
+                    <div class="resultFactorial">
+                        <span>n!</span>
+                    </div>
                 </div>
-                <h3>El factorial de <span>n!</span> es:</h3>
-                <div>
-                    <span>n!</span>
-                </div>
-            </section>
+                </section>
 
         </div>
     </main>
