--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                 <div class="containFactorialApp">
                     <h2>CalcFact </h2>
                     <div>
-                        <form>
-                            <input type="text" placeholder="Valor a calcular">
-                            <button type="submit">CALCULAR</button>
+                        <form id="formCalc">
+                            <input id="valueCal" class="valueCal" type="text" placeholder="Valor a calcular">
+                            <button id="btnCal" class="btnCal" type="submit">CALCULAR</button>
                         </form>
                     </div>
                     <h3 >El factorial de <span>n!</span> es:</h3>
-                    <div class="resultFactorial">
-                        <span>n!</span>
+                    <div class="resultFact">
+                        <span id="resultFact" >n!</span>
                     </div>
                 </div>
                 </section>
