Create exception error

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                             <input id="valueCal" class="valueCal" type="text" placeholder="Valor a calcular">
                             <button id="btnCal" class="btnCal" type="submit">CALCULAR</button>
                         </form>
+                        <p id="msgError"></p>
                     </div>
                     <h3 >El factorial de <span>n!</span> es:</h3>
                     <div class="resultFact">
